Card spacing and H1 removed and fixing the footer at the bottom

--- a/home/src/index.css
+++ b/home/src/index.css
@@ -38,7 +38,7 @@ code {
   background-color: rgb(120, 106, 106);
   border-radius: 8px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 5%;
+  padding: 1%;
   transition: transform 0.2s ease-in-out;
   margin-left: 5%;
   
@@ -47,4 +47,9 @@ code {
     transform: scale(1.05);
     
   }
+}
+
+.slide
+{
+  
 }
